--- a/Void/.gitignore
+++ b/Void/.gitignore
@@ -89,6 +89,8 @@ fmod_editor.log
 /[Aa]ssets/StreamingAssets/**/*.bank
 /[Aa]ssets/StreamingAssets/**/*.bank.meta
 
+/[Vv]oidBuilds
+
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
