--- a/Void/Packages/manifest.json
+++ b/Void/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.netcode.gameobjects": "1.11.0",
     "com.unity.probuilder": "5.2.3",
     "com.unity.render-pipelines.high-definition": "14.0.11",
+    "com.unity.services.lobby": "1.2.2",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
