--- a/Void/Packages/manifest.json
+++ b/Void/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.cinemachine": "3.1.2",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.formats.fbx": "5.1.3",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.memoryprofiler": "1.1.3",
     "com.unity.multiplayer.center": "1.0.0",
