--- a/Void/Packages/manifest.json
+++ b/Void/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
     "com.unity.multiplayer.tools": "2.2.1",
     "com.unity.netcode.gameobjects": "1.11.0",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.probuilder": "6.0.4",
     "com.unity.render-pipelines.high-definition": "17.0.3",
     "com.unity.services.lobby": "1.2.2",
